force-app/main/default/objects/ScrapTypeSupplierRelation__c/ScrapTypeSupplierRelation__c.object-meta.xml
<CustomObject>
    <label>Прив&apos;язки брухту</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Прив&apos;язки брухту</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>