force-app/main/default/objects/ScrapTypeSupplierRelation__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Постачальник</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ScrapTypeSupplierRelation</relationshipName>
    <type>Lookup</type>
</CustomField>