force-app/main/default/objects/ScrapTypeSupplierRelation__c/fields/Permitted__c.field-meta.xml
<CustomField>
    <fullName>Permitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Дозволено</label>
    <type>Checkbox</type>
</CustomField>