force-app/main/default/objects/ScrapTypeSupplierRelation__c/fields/ScrapType__c.field-meta.xml
<CustomField>
    <fullName>ScrapType__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Брухт</label>
    <referenceTo>ScrapType__c</referenceTo>
    <relationshipName>ScrapTypeSupplierRelation</relationshipName>
    <type>Lookup</type>
</CustomField>