force-app/main/default/objects/ScrapTypeSupplierRelation__c/fields/SupplierType__c.field-meta.xml
<CustomField>
    <fullName>SupplierType__c</fullName>
    <formula>Account__r.ScrapSupplierType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Тип постачальника</label>
    <type>Text</type>
</CustomField>