force-app/main/default/objects/ScrapTypeSupplierRelation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ScrapType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>